--- a/pom.xml
+++ b/pom.xml
@@ -33,4 +33,13 @@
             </plugin>
         </plugins>
     </build>
+         <build>
+    <plugins>
+        <plugin>
+            <groupId>org.sonarsource.scanner.maven</groupId>
+            <artifactId>sonar-maven-plugin</artifactId>
+            <version>3.9.1.2184</version>
+        </plugin>
+    </plugins>
+</build>
 </project>
